2006-04-26  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
	
	* src/DLRewriter.cpp: New file.
	Some updates, currently non-working.
	* include/DLRewriter.h: Likewise.

	* src/RacerRunner.cpp (RacerRunner::isRunning)
	(RacerRunner::setPort, RacerRunner::getPort): New methods.
	(RacerRunner::run): Don't check for running Racer processes.
	* include/RacerRunner.h: Likewise.

	* include/TCPStream.h (TCPIOStream::setConnection): New method.
	* src/TCPStream.cpp: Likewise.

	* src/RacerInterface.cpp (RacerInterface::getStream): New method.
	* include/RacerInterface.h: Likewise.

	* src/RacerExtAtom.cpp: Add kb-ontologies command.
	(RacerExtAtom::retrieve): Reset stream after starting Racer.
	* include/RacerBuilder.h: Likewise.
	Fix documentation.

2006-04-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/Makefile.am (noinst_HEADERS): Add DLRewriter.h.

	* src/Makefile.am (bin_SCRIPTS): Add dl-rewriter.
	Add DLRewriter.cpp.

	* src/OWLParser.cpp (OWLParser::parseNames): Parse concept and
	role names.
	* include/OWLParser.h: Likewise.

	* src/RacerInterface.cpp: Add DLRewriter.
	* include/RacerInterface.h: Likewise.

	* src/dl-rewriter: New file.

2006-04-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/Makefile.am (noinst_HEADERS): Add RacerQueryExpr.h and
	RacerQueryExpr.tcc.

2006-04-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/RacerInterface.cpp (RacerInterface::~RacerInterface): Don't
	delete cache entries, they are managed shared_ptr's now.
	(RacerInterface::setOptions): New method.
	* include/RacerInterface.h: Likewise.

2006-04-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/RacerQuery.h (QueryCtx): Add a Ctor for PluginAtom::Query.
	* src/RacerQuery.cpp: Likewise.

	* include/RacerExtAtom.h (RacerExtAtom::setupQuery): Remove.
	* src/RacerExtAtom.cpp: Likewise.

	* src/RacerQuery.cpp (Query::createHead): Simplify code.

	* src/RacerBuilder.cpp: Use the interpreters of RacerQueryExpr to
	build the commands.
